autometrics/tests/compilation/result_labels/fail/wrong_kv_attribute.stderr
error: Only `label(result = "RES")` (RES can be "ok" or "error") is supported
  --> tests/compilation/result_labels/fail/wrong_kv_attribute.rs:11:7
   |
11 |     #[label = "error"]
   |       ^^^^^^^^^^^^^^^
